@@ -7,6 +7,7 @@ UTIL:
 * type=device  actions=sp_spg-create-alert-only-bp:true | ironskillet update for panos 10.2
 
 BUGFIX:
+* type=rule/schedule 'filter=(schedule.expire.in.days > -90) / (expire.in.days > -90) | bugfix for negative numbers
 
 GENERAL:
 
